k8s/file_to_blackhole_0ms_latency/manifests/lading-intake.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lading-intake
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lading-intake
  template:
    metadata:
      labels:
        app: lading-intake
    spec:
      containers:
      - name: lading
        image: ghcr.io/datadog/lading:0.29.2
        args:
        - "--config-path"
        - "/etc/lading/lading.yaml"
        - "--no-target"
        - "--prometheus-addr"
        - "0.0.0.0:9000"
        - "--experiment-duration-infinite"
        volumeMounts:
        - name: config
          mountPath: /etc/lading
      volumes:
      - name: config
        configMap:
          name: lading-intake-config
---
apiVersion: v1
kind: Service
metadata:
  name: lading-intake
  namespace: default
spec:
  selector:
    app: lading-intake
  ports:
  - port: 8080
    targetPort: 8080
